--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <style>
         h1 {text-align: center;}
+        h2 {text-align: center;}
         p {text-align: center;}
         div {text-align: center;}
     </style>
 </head>
-
 <body>
     <h1>
-        Under construction...
+        Alex Zahn
     </h1>
+    <h2>
+        Audio Engineer<br>
+        Software, Hardware, Production, Acoustics, Process improvement
+    </h2>
     <p>
-        In the meantime, you can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
+        You can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
         or find me on one of the following platforms: <br>
         <a href="https://twitter.com/AlexZahnAudio">Twitter</a> <br>
         <a href="https://discordapp.com/users/379814698301915136">Discord (AlexZahnAudio#4716)</a> <br>
-        <a href="https://github.com/rocketsciencewins">Github</a> <br>
+        <a href="https://github.com/rocketsciencewins">GitHub</a> <br>
         <a href="https://www.instagram.com/alexzahnaudio/">Instagram</a> <br>
     </p>
 </body>
