--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <style>
         h1 {text-align: center;}
         h2 {text-align: center;}
+        h3 {text-align: center;}
+        h4 {text-align: center;}
         p {text-align: center;}
         div {text-align: center;}
     </style>
@@ -13,9 +15,11 @@
         Alex Zahn
     </h1>
     <h2>
-        Audio Engineer<br>
-        Software, Hardware, Production, Acoustics, Process improvement
+        Audio Engineer
     </h2>
+    <h4>
+        Software, Hardware, Acoustics, Process improvement
+    </h4>
     <p>
         You can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
         or find me on one of the following platforms: <br>
