--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <style>
-        h1 {text-align: center;}
-        h2 {text-align: center;}
-        h3 {text-align: center;}
-        h4 {text-align: center;}
+        h1 {text-align: center; margin:0; padding:0}
+        h2 {text-align: center; margin:0; padding:0}
+        h3 {text-align: center; margin:0; padding:0}
         p {text-align: center;}
         div {text-align: center;}
     </style>
@@ -17,9 +16,9 @@
     <h2>
         Audio Engineer
     </h2>
-    <h4>
+    <h3>
         Software, Hardware, Acoustics, Process improvement
-    </h4>
+    </h3>
     <p>
         You can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
         or find me on one of the following platforms: <br>
