--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         You can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
         or find me on one of the following platforms: <br>
         <a href="https://twitter.com/AlexZahnAudio">Twitter</a> <br>
-        <a href="https://discordapp.com/users/379814698301915136">Discord (AlexZahnAudio#4716)</a> <br>
+        <a href="https://discordapp.com/users/379814698301915136">Discord</a> (AlexZahnAudio#4716)<br>
         <a href="https://github.com/rocketsciencewins">GitHub</a> <br>
         <a href="https://www.instagram.com/alexzahnaudio/">Instagram</a> <br>
     </p>
