Added itch.io profile link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         or find me on one of the following platforms: <br>
         <a href="https://twitter.com/AlexZahnAudio">Twitter</a> <br>
         <a href="https://discordapp.com/users/379814698301915136">Discord</a> (AlexZahnAudio#4716)<br>
+        <a href="https://rocketsciencewins.itch.io/">Itch.io</a> <br>
         <a href="https://github.com/rocketsciencewins">GitHub</a> <br>
         <a href="https://www.instagram.com/alexzahnaudio/">Instagram</a> <br>
     </p>
