--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         Audio Engineer
     </h2>
     <h3>
-        Software, Hardware, Acoustics, Process improvement
+        Software, Hardware, Acoustics, Production
     </h3>
     <p>
-        You can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
+        This site is under construction. <br>
+        <br>
+        In the meantime, you can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
         or find me on one of the following platforms: <br>
         <a href="https://twitter.com/AlexZahnAudio">Twitter</a> <br>
         <a href="https://discordapp.com/users/379814698301915136">Discord</a> (AlexZahnAudio#4716)<br>
