--- a/index.html
+++ b/index.html
@@ -1,34 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        h1 {text-align: center; margin:0; padding:0}
-        h2 {text-align: center; margin:0; padding:0}
-        h3 {text-align: center; margin:0; padding:0}
-        p {text-align: center;}
-        div {text-align: center;}
-    </style>
-</head>
-<body>
-    <h1>
-        Alex Zahn
-    </h1>
-    <h2>
-        Audio Engineer
-    </h2>
-    <h3>
-        Software, Hardware, Acoustics, Production
-    </h3>
-    <p>
-        This site is under construction. <br>
-        <br>
-        In the meantime, you can reach me at <a href="mailto:alex@alexzahnaudio.com">alex@alexzahnaudio.com</a> <br>
-        or find me on one of the following platforms: <br>
-        <a href="https://twitter.com/AlexZahnAudio">Twitter</a> <br>
-        <a href="https://discordapp.com/users/379814698301915136">Discord</a> (AlexZahnAudio#4716)<br>
-        <a href="https://rocketsciencewins.itch.io/">Itch.io</a> <br>
-        <a href="https://github.com/rocketsciencewins">GitHub</a> <br>
-        <a href="https://www.instagram.com/alexzahnaudio/">Instagram</a> <br>
-    </p>
-</body>
-</html>
+---
+layout: home
+title: Home
+---
